--- a/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.html
@@ -12,7 +12,7 @@
       <mat-chip-list [aria-orientation]="horizontal">
         <mat-chip 
           *ngFor="let chip of bookCategories"
-          (click)="chipedClicked(chip.name)"
+          (click)="chipClicked(chip.name)"
           selected="true"
           [color]="chipColor(chip.active)()"
           class="mat-chip">
