changes in add-book

--- a/BookItSrc/src/app/main/sub-main/my-books/add-book/add-book.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-books/add-book/add-book.component.html
@@ -1,14 +1,19 @@
-<input type="search"
-       class="form-control"
-       placeholder="title, author, isbn..." [formControl]="searchField">
+<div style="margin-top: 10pt;">
+  <input type="search" class="form-control" placeholder="title, author, isbn..." [formControl]="searchField">
+  <i class="fas fa-search"></i>
+</div>
 
-<button class="btn btn-primary" (click)="doSearch()">Search</button>
-<hr/>
+<hr />
+
 <ul>
-  <li *ngFor="let search of searches"><div>
-      <img [attr.src]="search.imagePath"><br> 
-      <span class='title' >{{search.title}}</span><br>
-      <span class='author'>by {{search.author}}</span><br>
-      <span class='category'>{{search.category}}</span><br>
-    </div></li>
+  <li *ngFor="let result of results">
+    <div class='book-left'><img class='cover' [attr.src]="result.imagePath"><br>
+      <span class='title' >{{result.title}}</span><br>
+      <span class='author'>by {{result.author}}</span>
+    </div>
+    <div class='book-right'><i class="fas fa-plus"></i></div>
+      <!-- <span class='category'>{{result.category}}</span> -->
+    <hr />
+  </li>
+  
 </ul>
