--- a/BookItSrc/src/app/main/sub-main/settings/locations/locations.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/locations/locations.component.scss
@@ -1,84 +1,86 @@
-
-.container{
-    padding: 0px;
+.container {
+  padding: 0px;
 }
 
-
-.header{
-    background-color: black;
-    color: white;
-    width: 100%;
-    height: 80px;
-    align-items: left;
+.header {
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 80px;
+  align-items: left;
 }
 
-
-.button-switch-page{
+.button-switch-page {
   align-content: center;
   padding-left: 20px;
   align-self: left;
 }
 
-
-left-arrow-icon{
-    align-items: flex-start;
-    width: 65px;
-    height: 65px;
-  }
-    
-  label.header-loc {
-    flex-grow: 2;
-    position: relative;
-    right: 44px;
-    margin: 0;
-    }
-    
-    section.header {
-    display: flex;
-    align-items: center;
-    justify-content: stretch;
-    }
-
-.button-add-loc{
-    width: 100%;
-    background-color: #64B5F6;
-    color: white;
-    height: 60px;
+.loc-div {
+  width: 85%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 15px;
 }
 
-.locations-list{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+left-arrow-icon {
+  align-items: flex-start;
+  width: 65px;
+  height: 65px;
 }
 
-.button-left-icon{
-    
-    align-items: flex-start;
+label.header-loc {
+  flex-grow: 2;
+  position: relative;
+  right: 44px;
+  margin: 0;
 }
 
+section.header {
+  display: flex;
+  align-items: center;
+  justify-content: stretch;
+}
 
-.button-right-icon{
-    align-items: flex-end;
+.button-add-loc {
+  width: 100%;
+  background-color: #03a9f4;
+  color: white;
+  height: 60px;
+}
+
+.locations-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.button-left-icon {
+  align-items: flex-start;
+}
+
+.button-right-icon {
+  align-items: flex-end;
 }
 
 .blue-icon svg {
-fill:#64B5F6;
+  fill: #03a9f4;
 }
-.gray-icon svg{
-fill:#d0d0d0;
-}
-
-.info-section{
-    color:  #737373;
-    align-content: left;
+.gray-icon svg {
+  fill: #d0d0d0;
 }
 
-.label-loc{
-    font: 12px;
-    font-weight: 600;
+.info-section {
+  color: #737373;
+  align-content: left;
 }
 
-.label-loc-city-street{
-    font: 8px;
+.label-loc {
+  font: 12px;
+  font-weight: 600;
+}
+
+.label-loc-city-street {
+  font: 8px;
 }
