--- a/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.html
@@ -1,4 +1,4 @@
-<container-element [ngSwitch]="this.which_page">
+<container-element [ngSwitch]="this.which_page$ | async">
   <div class="container" *ngSwitchCase="'categories'">
 
     <section class="header">         
@@ -14,7 +14,7 @@
           *ngFor="let chip of bookCategories"
           (click)="chipedClicked(chip.name)"
           selected="true"
-          [color]="chip.color"
+          [color]="chipColor(chip.active)()"
           class="mat-chip">
           {{chip.name}}
         </mat-chip>
