settings connect to DB

--- a/BookItSrc/src/app/login/login.component.html
+++ b/BookItSrc/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <button (click)="auth.facebookLogin()">
     <i class="fab fa-facebook-f"></i> Login With Facebook
   </button>
-  <div *ngIf="user$ | async as user">
+  <div *ngIf="this.userData">
     <button (click)="googleLogin()">
       <i class="fab fa-google"></i> Login With Google
     </button>
