--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.html
@@ -1,8 +1,8 @@
 <container-element [ngSwitch]="this.which_page">
   <div class="switch_container_1" *ngSwitchCase="'settings'">
-    <div class="container" *ngIf="auth.user | async as user">
-      <img [src]="user.photoURL" />
-      <h3> {{ user.displayName }}</h3>
+    <div class="container" *ngIf="userData">
+      <img [src]="userData.info.photoURL" />
+      <h3> {{ userData.info.displayName }}</h3>
 
       <mat-card class="RightLeftStyle">
         <mat-card-content>
@@ -23,10 +23,11 @@
           <div class="container_search_radius">
             <label class="form-margin-sr1" name="search_radius_lab_1"> Search Radius</label>
             <span class="spacer"></span>
-            <label class="form-margin-sr2" name="search_radius_lab_2" [style.color]="'#8a8a8a'"> {{ value }}Km.</label>
+            <label class="form-margin-sr2" name="search_radius_lab_2" [style.color]="'#8a8a8a'"> {{ this.userData.locationSettings.searchRadiusKm }}Km.</label>
           </div>
           <mat-slider name="search_radius_slider" class="form-margin" [max]="max" [min]="min" [step]="step" [thumb-label]="thumbLabel"
-            [(ngModel)]="value">
+            [(ngModel)]="this.userData.locationSettings.searchRadiusKm"
+            (change)="this.updateSearchRadiusKm()">
           </mat-slider>
         </mat-card-content>
       </mat-card>
@@ -53,7 +54,8 @@
             <div class="container_location">
               <label class="form-margin-c1" name="location_lab_1"> Share My Books</label>
               <span class="spacer"></span>
-              <mat-slide-toggle class="slide-show-books" [color]="slide_color" [checked]="slide_checked">
+              <mat-slide-toggle class="slide-show-books"  [(ngModel)]="this.userData.info.shareMyBooks"
+              (change)="this.updateShareMyBooks()">
               </mat-slide-toggle>
             </div>
           </section>
@@ -63,7 +65,7 @@
       <mat-card class="buttons">
         <mat-card-content>
           <div class="container_logout">
-            <button mat-button (click)="auth.logout()" id="button_logout">Logout</button>
+            <button mat-button (click)="logout()" id="button_logout">Logout</button>
           </div>
         </mat-card-content>
       </mat-card>
