changes in app-book

--- a/BookItSrc/src/app/main/navbar/navbar/navbar.component.html
+++ b/BookItSrc/src/app/main/navbar/navbar/navbar.component.html
@@ -12,7 +12,7 @@
       </button>
 
       <button mat-icon-button (click)="setMyBooks()">
-        <div *ngIf="navbar.optionEnabled ==='my books'; then myBooksEnableIcon; else myBooksDisableIcon"></div>
+        <div *ngIf="navbar.optionEnabled ==='my_books'; then myBooksEnableIcon; else myBooksDisableIcon"></div>
       </button>
     </mat-toolbar-row>
 
