--- a/BookItSrc/src/app/main/sub-main/sub-main.component.html
+++ b/BookItSrc/src/app/main/sub-main/sub-main.component.html
@@ -6,6 +6,6 @@
 	<app-explore></app-explore>
 </div>
 
-<div *ngIf="(_optionEnabled$ | async) ==='my books'">
+<div *ngIf="(_optionEnabled$ | async) ==='my_books'">
 	<app-my-books></app-my-books>
 </div>
