--- a/BookItSrc/src/app/main/sub-main/settings/dialog-add-location-title/dialog-add-location-title.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/dialog-add-location-title/dialog-add-location-title.component.scss
@@ -4,6 +4,11 @@
 }
 
   
-  .label-loc-city-street {
+  .label-address {
     font: 8px;
+  }
+
+  /deep/ .mat-form-field-infix{
+    max-width: 200px;
+    min-width: 100px;
   }
