--- a/BookItSrc/src/app/login/login.component.html
+++ b/BookItSrc/src/app/login/login.component.html
@@ -20,8 +20,8 @@
   <div class="row align-items-center" style="margin-top: 10px;">
     <div class="col">
       <div class="btn-group">
-        <button class="btn btn-primary disabled" (click)="auth.facebookLogin()"><i class="fab fa-facebook-f" style="width: 16px; height: 20px;"></i></button>
-        <button class="btn btn-primary" style="width: 12em;" (click)="auth.facebookLogin()">Login With Facebook</button>
+        <button class="btn btn-primary disabled" (click)="facebookLogin()"><i class="fab fa-facebook-f" style="width: 16px; height: 20px;"></i></button>
+        <button class="btn btn-primary" style="width: 12em;" (click)="facebookLogin()">Login With Facebook</button>
       </div>
     </div>
   </div>
